--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "merge": "^1.2.1",
+    "randomatic": "^3.1.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-scripts-ts": "2.14.0",
-    "tachyons": "^4.9.1"
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -15,10 +17,10 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.2",
-    "@types/node": "^9.6.1",
-    "@types/react": "^16.1.0",
-    "@types/react-dom": "^16.0.4",
-    "typescript": "^2.8.1"
+    "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.37",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "typescript": "^2.9.2"
   }
 }
